qt/gen_qvariant.nim


proc fcQVariant_new(): ptr cQVariant {.importc: "QVariant_new".}
proc fcQVariant_new2(typeVal: cint): ptr cQVariant {.importc: "QVariant_new2".}
proc fcQVariant_new3(typeId: cint, copy: pointer): ptr cQVariant {.importc: "QVariant_new3".}
proc fcQVariant_new4(typeId: cint, copy: pointer, flags: cuint): ptr cQVariant {.importc: "QVariant_new4".}
proc fcQVariant_new5(other: pointer): ptr cQVariant {.importc: "QVariant_new5".}
proc fcQVariant_new6(s: pointer): ptr cQVariant {.importc: "QVariant_new6".}
proc fcQVariant_new7(i: cint): ptr cQVariant {.importc: "QVariant_new7".}
proc fcQVariant_new8(ui: cuint): ptr cQVariant {.importc: "QVariant_new8".}
proc fcQVariant_new9(ll: clonglong): ptr cQVariant {.importc: "QVariant_new9".}
proc fcQVariant_new10(ull: culonglong): ptr cQVariant {.importc: "QVariant_new10".}
proc fcQVariant_new11(b: bool): ptr cQVariant {.importc: "QVariant_new11".}
proc fcQVariant_new12(d: float64): ptr cQVariant {.importc: "QVariant_new12".}
proc fcQVariant_new13(f: float32): ptr cQVariant {.importc: "QVariant_new13".}
proc fcQVariant_new14(str: cstring): ptr cQVariant {.importc: "QVariant_new14".}
proc fcQVariant_new15(bytearray: struct_miqt_string): ptr cQVariant {.importc: "QVariant_new15".}
proc fcQVariant_new16(bitarray: pointer): ptr cQVariant {.importc: "QVariant_new16".}
proc fcQVariant_new17(string: struct_miqt_string): ptr cQVariant {.importc: "QVariant_new17".}
proc fcQVariant_new18(stringlist: struct_miqt_array): ptr cQVariant {.importc: "QVariant_new18".}
proc fcQVariant_new19(qchar: pointer): ptr cQVariant {.importc: "QVariant_new19".}
proc fcQVariant_new20(date: pointer): ptr cQVariant {.importc: "QVariant_new20".}
proc fcQVariant_new21(time: pointer): ptr cQVariant {.importc: "QVariant_new21".}
proc fcQVariant_new22(datetime: pointer): ptr cQVariant {.importc: "QVariant_new22".}
proc fcQVariant_new23(map: struct_miqt_map): ptr cQVariant {.importc: "QVariant_new23".}
proc fcQVariant_new24(hash: struct_miqt_map): ptr cQVariant {.importc: "QVariant_new24".}
proc fcQVariant_new25(size: pointer): ptr cQVariant {.importc: "QVariant_new25".}
proc fcQVariant_new26(size: pointer): ptr cQVariant {.importc: "QVariant_new26".}
proc fcQVariant_new27(pt: pointer): ptr cQVariant {.importc: "QVariant_new27".}
proc fcQVariant_new28(pt: pointer): ptr cQVariant {.importc: "QVariant_new28".}
proc fcQVariant_new29(line: pointer): ptr cQVariant {.importc: "QVariant_new29".}
proc fcQVariant_new30(line: pointer): ptr cQVariant {.importc: "QVariant_new30".}
proc fcQVariant_new31(rect: pointer): ptr cQVariant {.importc: "QVariant_new31".}
proc fcQVariant_new32(rect: pointer): ptr cQVariant {.importc: "QVariant_new32".}
proc fcQVariant_new33(locale: pointer): ptr cQVariant {.importc: "QVariant_new33".}
proc fcQVariant_new34(regExp: pointer): ptr cQVariant {.importc: "QVariant_new34".}
proc fcQVariant_new35(re: pointer): ptr cQVariant {.importc: "QVariant_new35".}
proc fcQVariant_new36(easing: pointer): ptr cQVariant {.importc: "QVariant_new36".}
proc fcQVariant_new37(uuid: pointer): ptr cQVariant {.importc: "QVariant_new37".}
proc fcQVariant_new38(url: pointer): ptr cQVariant {.importc: "QVariant_new38".}
proc fcQVariant_new39(jsonValue: pointer): ptr cQVariant {.importc: "QVariant_new39".}
proc fcQVariant_new40(jsonObject: pointer): ptr cQVariant {.importc: "QVariant_new40".}
proc fcQVariant_new41(jsonArray: pointer): ptr cQVariant {.importc: "QVariant_new41".}
proc fcQVariant_new42(jsonDocument: pointer): ptr cQVariant {.importc: "QVariant_new42".}
proc fcQVariant_new43(modelIndex: pointer): ptr cQVariant {.importc: "QVariant_new43".}
proc fcQVariant_new44(modelIndex: pointer): ptr cQVariant {.importc: "QVariant_new44".}
proc fcQVariant_operatorAssign(self: pointer, other: pointer): void {.importc: "QVariant_operatorAssign".}
proc fcQVariant_swap(self: pointer, other: pointer): void {.importc: "QVariant_swap".}
proc fcQVariant_typeX(self: pointer, ): cint {.importc: "QVariant_type".}
proc fcQVariant_userType(self: pointer, ): cint {.importc: "QVariant_userType".}
proc fcQVariant_typeName(self: pointer, ): cstring {.importc: "QVariant_typeName".}
proc fcQVariant_canConvert(self: pointer, targetTypeId: cint): bool {.importc: "QVariant_canConvert".}
proc fcQVariant_convert(self: pointer, targetTypeId: cint): bool {.importc: "QVariant_convert".}
proc fcQVariant_isValid(self: pointer, ): bool {.importc: "QVariant_isValid".}
proc fcQVariant_isNull(self: pointer, ): bool {.importc: "QVariant_isNull".}
proc fcQVariant_clear(self: pointer, ): void {.importc: "QVariant_clear".}
proc fcQVariant_detach(self: pointer, ): void {.importc: "QVariant_detach".}
proc fcQVariant_isDetached(self: pointer, ): bool {.importc: "QVariant_isDetached".}
proc fcQVariant_toInt(self: pointer, ): cint {.importc: "QVariant_toInt".}
proc fcQVariant_toUInt(self: pointer, ): cuint {.importc: "QVariant_toUInt".}
proc fcQVariant_toLongLong(self: pointer, ): clonglong {.importc: "QVariant_toLongLong".}
proc fcQVariant_toULongLong(self: pointer, ): culonglong {.importc: "QVariant_toULongLong".}
proc fcQVariant_toBool(self: pointer, ): bool {.importc: "QVariant_toBool".}
proc fcQVariant_toDouble(self: pointer, ): float64 {.importc: "QVariant_toDouble".}
proc fcQVariant_toFloat(self: pointer, ): float32 {.importc: "QVariant_toFloat".}
proc fcQVariant_toReal(self: pointer, ): float64 {.importc: "QVariant_toReal".}
proc fcQVariant_toByteArray(self: pointer, ): struct_miqt_string {.importc: "QVariant_toByteArray".}
proc fcQVariant_toBitArray(self: pointer, ): pointer {.importc: "QVariant_toBitArray".}
proc fcQVariant_toString(self: pointer, ): struct_miqt_string {.importc: "QVariant_toString".}
proc fcQVariant_toStringList(self: pointer, ): struct_miqt_array {.importc: "QVariant_toStringList".}
proc fcQVariant_toChar(self: pointer, ): pointer {.importc: "QVariant_toChar".}
proc fcQVariant_toDate(self: pointer, ): pointer {.importc: "QVariant_toDate".}
proc fcQVariant_toTime(self: pointer, ): pointer {.importc: "QVariant_toTime".}
proc fcQVariant_toDateTime(self: pointer, ): pointer {.importc: "QVariant_toDateTime".}
proc fcQVariant_toMap(self: pointer, ): struct_miqt_map {.importc: "QVariant_toMap".}
proc fcQVariant_toHash(self: pointer, ): struct_miqt_map {.importc: "QVariant_toHash".}
proc fcQVariant_toPoint(self: pointer, ): pointer {.importc: "QVariant_toPoint".}
proc fcQVariant_toPointF(self: pointer, ): pointer {.importc: "QVariant_toPointF".}
proc fcQVariant_toRect(self: pointer, ): pointer {.importc: "QVariant_toRect".}
proc fcQVariant_toSize(self: pointer, ): pointer {.importc: "QVariant_toSize".}
proc fcQVariant_toSizeF(self: pointer, ): pointer {.importc: "QVariant_toSizeF".}
proc fcQVariant_toLine(self: pointer, ): pointer {.importc: "QVariant_toLine".}
proc fcQVariant_toLineF(self: pointer, ): pointer {.importc: "QVariant_toLineF".}
proc fcQVariant_toRectF(self: pointer, ): pointer {.importc: "QVariant_toRectF".}
proc fcQVariant_toLocale(self: pointer, ): pointer {.importc: "QVariant_toLocale".}
proc fcQVariant_toRegExp(self: pointer, ): pointer {.importc: "QVariant_toRegExp".}
proc fcQVariant_toRegularExpression(self: pointer, ): pointer {.importc: "QVariant_toRegularExpression".}
proc fcQVariant_toEasingCurve(self: pointer, ): pointer {.importc: "QVariant_toEasingCurve".}
proc fcQVariant_toUuid(self: pointer, ): pointer {.importc: "QVariant_toUuid".}
proc fcQVariant_toUrl(self: pointer, ): pointer {.importc: "QVariant_toUrl".}
proc fcQVariant_toJsonValue(self: pointer, ): pointer {.importc: "QVariant_toJsonValue".}
proc fcQVariant_toJsonObject(self: pointer, ): pointer {.importc: "QVariant_toJsonObject".}
proc fcQVariant_toJsonArray(self: pointer, ): pointer {.importc: "QVariant_toJsonArray".}
proc fcQVariant_toJsonDocument(self: pointer, ): pointer {.importc: "QVariant_toJsonDocument".}
proc fcQVariant_toModelIndex(self: pointer, ): pointer {.importc: "QVariant_toModelIndex".}
proc fcQVariant_toPersistentModelIndex(self: pointer, ): pointer {.importc: "QVariant_toPersistentModelIndex".}
proc fcQVariant_load(self: pointer, ds: pointer): void {.importc: "QVariant_load".}
proc fcQVariant_save(self: pointer, ds: pointer): void {.importc: "QVariant_save".}
proc fcQVariant_typeToName(typeId: cint): cstring {.importc: "QVariant_typeToName".}
proc fcQVariant_nameToType(name: cstring): cint {.importc: "QVariant_nameToType".}
proc fcQVariant_data(self: pointer, ): pointer {.importc: "QVariant_data".}
proc fcQVariant_constData(self: pointer, ): pointer {.importc: "QVariant_constData".}
proc fcQVariant_data2(self: pointer, ): pointer {.importc: "QVariant_data2".}
proc fcQVariant_operatorEqual(self: pointer, v: pointer): bool {.importc: "QVariant_operatorEqual".}
proc fcQVariant_operatorNotEqual(self: pointer, v: pointer): bool {.importc: "QVariant_operatorNotEqual".}
proc fcQVariant_operatorLesser(self: pointer, v: pointer): bool {.importc: "QVariant_operatorLesser".}
proc fcQVariant_operatorLesserOrEqual(self: pointer, v: pointer): bool {.importc: "QVariant_operatorLesserOrEqual".}
proc fcQVariant_operatorGreater(self: pointer, v: pointer): bool {.importc: "QVariant_operatorGreater".}
proc fcQVariant_operatorGreaterOrEqual(self: pointer, v: pointer): bool {.importc: "QVariant_operatorGreaterOrEqual".}
proc fcQVariant_toInt1(self: pointer, ok: ptr bool): cint {.importc: "QVariant_toInt1".}
proc fcQVariant_toUInt1(self: pointer, ok: ptr bool): cuint {.importc: "QVariant_toUInt1".}
proc fcQVariant_toLongLong1(self: pointer, ok: ptr bool): clonglong {.importc: "QVariant_toLongLong1".}
proc fcQVariant_toULongLong1(self: pointer, ok: ptr bool): culonglong {.importc: "QVariant_toULongLong1".}
proc fcQVariant_toDouble1(self: pointer, ok: ptr bool): float64 {.importc: "QVariant_toDouble1".}
proc fcQVariant_toFloat1(self: pointer, ok: ptr bool): float32 {.importc: "QVariant_toFloat1".}
proc fcQVariant_toReal1(self: pointer, ok: ptr bool): float64 {.importc: "QVariant_toReal1".}
proc fcQVariant_fromValue(value: pointer): pointer {.importc: "QVariant_fromValue".}
proc fcQVariant_delete(self: pointer) {.importc: "QVariant_delete".}
proc fcQVariantComparisonHelper_new(varVal: pointer): ptr cQVariantComparisonHelper {.importc: "QVariantComparisonHelper_new".}
proc fcQVariantComparisonHelper_new2(param1: pointer): ptr cQVariantComparisonHelper {.importc: "QVariantComparisonHelper_new2".}
proc fcQVariantComparisonHelper_delete(self: pointer) {.importc: "QVariantComparisonHelper_delete".}
proc fcQVariantHandler_delete(self: pointer) {.importc: "QVariant__Handler_delete".}
proc fcQSequentialIterableconst_iterator_new(other: pointer): ptr cQSequentialIterableconst_iterator {.importc: "QSequentialIterable__const_iterator_new".}
proc fcQSequentialIterableconst_iterator_operatorAssign(self: pointer, other: pointer): void {.importc: "QSequentialIterable__const_iterator_operatorAssign".}
proc fcQSequentialIterableconst_iterator_operatorMultiply(self: pointer, ): pointer {.importc: "QSequentialIterable__const_iterator_operatorMultiply".}
proc fcQSequentialIterableconst_iterator_operatorEqual(self: pointer, o: pointer): bool {.importc: "QSequentialIterable__const_iterator_operatorEqual".}
proc fcQSequentialIterableconst_iterator_operatorNotEqual(self: pointer, o: pointer): bool {.importc: "QSequentialIterable__const_iterator_operatorNotEqual".}
proc fcQSequentialIterableconst_iterator_operatorPlusPlus(self: pointer, ): pointer {.importc: "QSequentialIterable__const_iterator_operatorPlusPlus".}
proc fcQSequentialIterableconst_iterator_operatorPlusPlusWithInt(self: pointer, param1: cint): pointer {.importc: "QSequentialIterable__const_iterator_operatorPlusPlusWithInt".}
proc fcQSequentialIterableconst_iterator_operatorMinusMinus(self: pointer, ): pointer {.importc: "QSequentialIterable__const_iterator_operatorMinusMinus".}
proc fcQSequentialIterableconst_iterator_operatorMinusMinusWithInt(self: pointer, param1: cint): pointer {.importc: "QSequentialIterable__const_iterator_operatorMinusMinusWithInt".}
